make sizeOf by 3rd lib, no java 10 issue